chore: Java 8 tests